--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -36,4 +35,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-worklogs.md
+# documentation
+/docs/
+
+# IDE
+.vscode/
+.idea/
