--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/cron/sync-proposals",
+      "path": "/api/cron/sync-all",
       "schedule": "0 6 * * *"
-    },
-    {
-      "path": "/api/cron/sync-prs",
-      "schedule": "0 12 * * *"
-    },
-    {
-      "path": "/api/cron/sync-discussions",
-      "schedule": "0 18 * * *"
     },
     {
       "path": "/api/cron/generate-summaries",
